# aispiritlab-agentic

./: .dockerignore  .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: docs-pages.yml
apps/docs/: README.md  next.config.mjs  package-lock.json  package.json  source.config.ts  tsconfig.json
apps/docs/app/: globals.css  layout.tsx  page.tsx
apps/docs/app/api/search/: route.ts
apps/docs/app/docs/: layout.tsx
apps/docs/app/docs/[[...slug]]/: page.tsx
apps/docs/components/: mdx.tsx  mermaid.tsx  provider.tsx
apps/docs/content/docs/: concepts.mdx  getting-started.mdx  how-it-works.mdx  index.mdx  meta.json
apps/docs/content/docs/reference/: configuration.mdx  meta.json
apps/docs/content/docs/workshops/: lab0.mdx  lab1.mdx  lab2.mdx  lab3.mdx  lab4.mdx  lab5.mdx  lab6.mdx  meta.json
apps/docs/lib/: layout.shared.tsx
containers/: docker-compose.lab6.yml
